--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "era",
+  "name": "dynamo-desktop",
   "version": "12.0.0",
   "description": "DynamoDB GUI Client built with Electron, React, and Vite",
   "main": "./out/main/main.js",
@@ -35,6 +35,11 @@
     ]
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.962.0",
+    "@aws-sdk/client-sts": "^3.962.0",
+    "@aws-sdk/credential-providers": "^3.962.0",
+    "@aws-sdk/lib-dynamodb": "^3.962.0",
+    "@aws-sdk/shared-ini-file-loader": "^3.370.0",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@radix-ui/react-slot": "^1.2.3",
