--- a/package.json
+++ b/package.json
@@ -40,10 +40,14 @@
     "@aws-sdk/credential-providers": "^3.962.0",
     "@aws-sdk/lib-dynamodb": "^3.962.0",
     "@aws-sdk/shared-ini-file-loader": "^3.370.0",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lint": "^6.9.2",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@uiw/codemirror-theme-andromeda": "^4.25.4",
+    "@uiw/react-codemirror": "^4.25.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.541.0",
