--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -33,7 +33,7 @@ linux:
     - AppImage
     - snap
     - deb
-  maintainer: electronjs.org
+  maintainer: arunim2@gmail.com
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
